--- a/ch02/pyproject.toml
+++ b/ch02/pyproject.toml
@@ -1,12 +1,10 @@
 [project]
 name = "library"
-version = "0.1.0"
+version = "0.2.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = []
 
 [dependency-groups]
-dev = [
-    "ruff>=0.11.12",
-]
+dev = ["ruff>=0.11.12"]
